--- a/views/index.jade
+++ b/views/index.jade
@@ -4,4 +4,5 @@ block content
   h1= title
   p(id='money') $5000
 
+  a= challengeId
   a(href='#', data-url=oauthURL, id='oAuthBeginLink') Authorize with Dwolla
