handle oauth return

--- a/views/oauthReturn.jade
+++ b/views/oauthReturn.jade
@@ -1,6 +1,6 @@
 script(type='text/javascript').
   window.opener.postMessage({
-    foo: 'bar'
+    challengeId: '#{challengeId}'
   }, '*');
 
 p Finished!
