--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,83 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color: #EEEEEE;
+  font-family: Roboto-Light;
+  color: #414141;
 }
 
 a {
   color: #00B7FF;
+}
+
+#oAuthBeginLink {
+  text-decoration:none
+}
+
+.container {
+  margin-top: 200px;
+  position: relative;
+}
+
+#moneyBox {
+  background: #474747;
+  border: 1px solid #676565;
+  border-radius: 8px;
+  /* $5000.00: */
+  font-family: Roboto-Light;
+  font-size: 72px;
+  color: #02FF8D;
+  line-height: 85px;
+
+  width: 300px;
+  height: 100px;
+
+  margin-left: auto;
+  margin-right: auto;
+
+  padding: 20px;
+
+  z-index: -1;
+  right: 0;
+  left: 0;
+  top: -120px;
+  position: absolute;
+}
+
+#mainbox {
+  background: #FFFFFF;
+  border: 1px solid #979797;
+  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.50);
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  padding:30px;
+}
+
+.leadHeader {
+  font-family: Roboto-Light;
+  font-size: 36px;
+  color: #414141;
+  line-height: 42px;
+  text-align: center;
+}
+
+.leadCopy{
+  font-size: 24px;
+  line-height: 28px;
+
+}
+
+.button {
+  background: #FF7404;
+  border: 1px solid #979797;
+  /* BEGIN: */
+  font-family: Roboto-Black;
+  font-size: 36px;
+  color: #FFFFFF;
+  line-height: 42px;
+  width: 180px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  padding: 10px;
+  text-decoration:none
 }
