--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,6 +17,10 @@ a {
   position: relative;
 }
 
+.asterisk {
+  color: #DB0303;
+}
+
 #moneyBox {
   background: #474747;
   border: 1px solid #676565;
@@ -58,12 +62,21 @@ a {
   color: #414141;
   line-height: 42px;
   text-align: center;
+  margin-top:5px;
 }
 
 .leadCopy{
   font-size: 24px;
   line-height: 28px;
+  margin-bottom: 50px;
+}
 
+.fineprint {
+  text-align: right;
+  font-family: Roboto-Thin;
+  font-size: 14px;
+  line-height: 16px;
+  margin-bottom: -10px;
 }
 
 .button {
