--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,8 +5,7 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel="stylesheet", href="//fonts.googleapis.com/css?family=Roboto:400,300,100,500,700")
 
-    script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js")
-    script(src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js")
+    script(src="/javascripts/jquery.min.js")
     script(src="/javascripts/index.js")
   body
     block content
