--- a/views/index.jade
+++ b/views/index.jade
@@ -15,3 +15,4 @@ block content
       p(class='fineprint') 
         span(class='asterisk') *
         | in our sandbox environment :)
+    div(class='timeBox') 00:00.000
