--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -65,7 +65,7 @@ a {
   margin-top:5px;
 }
 
-.leadCopy{
+.leadCopy {
   font-size: 24px;
   line-height: 28px;
   margin-bottom: 50px;
@@ -77,6 +77,24 @@ a {
   font-size: 14px;
   line-height: 16px;
   margin-bottom: -10px;
+}
+
+.timeBox {
+  width: 250px;
+  background: #FFF;
+  font-size: 50px;
+  text-align: center;
+  padding: 20px;
+  display: none;
+
+  margin-left: auto;
+  margin-right: auto;
+
+  padding-bottom: 150px;
+
+  /* Rectangle 1: */
+  border: 1px solid #979797;
+  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.50);
 }
 
 .button {
