--- a/views/index.jade
+++ b/views/index.jade
@@ -16,3 +16,4 @@ block content
         span(class='asterisk') *
         | in our sandbox environment :)
     div(class='timeBox') 00:00.000
+      div(class='timeLabel') time elapsed
