--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -82,7 +82,6 @@ a {
 .timeBox {
   width: 250px;
   background: #FFF;
-  font-size: 50px;
   text-align: center;
   padding: 20px;
   display: none;
@@ -90,11 +89,25 @@ a {
   margin-left: auto;
   margin-right: auto;
 
-  padding-bottom: 150px;
+  padding-bottom: 100px;
 
   /* Rectangle 1: */
   border: 1px solid #979797;
   box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.50);
+
+  /* 00:01.291: */
+  font-family: Roboto-Thin;
+  font-size: 58.19px;
+  color: #414141;
+  line-height: 68px;
+}
+
+.timeLabel {
+  font-family: Roboto-Light;
+  font-size: 15.51px;
+  color: #414141;
+  line-height: 18px;
+  text-align: right;
 }
 
 .button {
