--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,10 +6,11 @@ body {
 
 a {
   color: #00B7FF;
+  text-decoration:none;
 }
 
 #oAuthBeginLink {
-  text-decoration:none
+  text-decoration:none;
 }
 
 .container {
@@ -19,6 +20,61 @@ a {
 
 .asterisk {
   color: #DB0303;
+}
+
+.moneytimeBox {
+  display: inline-block;
+  width: 100%;
+}
+
+.winHeader {
+  /* Nice job!: */
+  font-family: Roboto-Regular;
+  font-size: 80px;
+  color: #414141;
+  text-align: center;
+  margin-top: 10px;
+  width:100%;
+  margin-bottom: 10px;
+}
+
+#moneyBoxWin {
+  background: #474747;
+  border: 1px solid #676565;
+  border-radius: 8px;
+  /* $5000.00: */
+  font-family: Roboto-Light;
+  font-size: 72px;
+  color: #02FF8D;
+  line-height: 85px;
+
+  width: 300px;
+  height: 100px;
+
+  margin-left:auto;
+  margin-right:auto;
+
+  padding: 20px;
+}
+
+.timeBoxWin {
+  width: 250px;
+  background: #FFF;
+  text-align: center;
+  padding: 20px;
+
+  margin-left:auto;
+  margin-right:auto;
+
+  padding-bottom: 50px;
+
+  /* Rectangle 1: */
+
+  /* 00:01.291: */
+  font-family: Roboto-Thin;
+  font-size: 58.19px;
+  color: #414141;
+  line-height: 68px;
 }
 
 #moneyBox {
