--- a/views/index.jade
+++ b/views/index.jade
@@ -15,5 +15,6 @@ block content
       p(class='fineprint') 
         span(class='asterisk') *
         | in our sandbox environment :)
-    div(class='timeBox') 00:00.000
+    div(class='timeBox') 
+      span(id='time') 00:00.000
       div(class='timeLabel') time elapsed
