insert data in finishChallenge

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,6 +18,11 @@ a {
   position: relative;
 }
 
+.containerWin {
+  margin-top: 100px;
+  position: relative;
+}
+
 .asterisk {
   color: #DB0303;
 }
