--- a/views/finishChallenge.jade
+++ b/views/finishChallenge.jade
@@ -1,17 +1,19 @@
 extends layout
 
 block content
-  div(class='container')
+  div(class='containerWin')
     div(id='mainbox')
       p(class='winHeader') Nice job!
 
       div(class='moneytimeBox')
-        div(class='timeBoxWin') 01:21.348
+        div(class='timeBoxWin') 
+          span(id='time') #{time}
           div(class='timeLabel') time elapsed
+        
 
-        div(id='moneyBoxWin') $5000.00
+        div(id='moneyBoxWin') $#{money}
 
-      p(class='leadCopy') Your generous reward's been sent to your new account, John Doe.
+      p(class='leadCopy') Your generous reward's been sent to your new account, #{name}.
 
       p > boast on twitter
       p > learn more about the Dwolla API
