update tweet body

--- a/views/finishChallenge.jade
+++ b/views/finishChallenge.jade
@@ -13,7 +13,7 @@ block content
 
         div(id='moneyBoxWin') $#{money}
 
-      p(class='leadCopy') Your generous reward's been sent to your new account, #{name}.  
+      p(class='leadCopy') Your generous reward has been sent to your new account, #{name}.  
         a(id="receiptOpen", href="#") view your receipt
 
       div(class='receipt')
@@ -22,7 +22,7 @@ block content
       div 
         h4 so what now?
         p > boast on twitter
-          | <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://dwolla.com" data-text="I just won $#{money} from the #DwollaRace" data-via="capable_monkey">Tweet</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+          | <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://registerrace.herokuapp.com" data-text="I just won $#{money} from the #DwollaRace" data-via="@dwolla">Tweet</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
         p 
           a(href="https://developers.dwolla.com", target="_blank")> learn more about the Dwolla API
 
