show time in words

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -77,7 +77,7 @@ a {
 }
 
 .timeBoxWin {
-  width: 250px;
+  width: 60%;
   background: #FFF;
   text-align: center;
   padding: 20px;
@@ -91,7 +91,7 @@ a {
 
   /* 00:01.291: */
   font-family: Roboto-Thin;
-  font-size: 58.19px;
+  font-size: 40px;
   color: #414141;
   line-height: 68px;
 }
