--- a/views/finishChallenge.jade
+++ b/views/finishChallenge.jade
@@ -24,7 +24,7 @@ block content
         p > boast on twitter
           | <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://registerrace.herokuapp.com" data-text="I just won $#{money} from the #DwollaRace" data-via="@dwolla">Tweet</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
         p 
-          a(href="https://developers.dwolla.com", target="_blank")> learn more about the Dwolla API
+          a(href="https://developers.dwolla.com/dev/pages/guides/oauth_account_creation", target="_blank")> learn more about the Dwolla API
 
       a(href='/')
         div(class='button') again?
