--- a/views/index.jade
+++ b/views/index.jade
@@ -18,3 +18,5 @@ block content
     div(class='timeBox') 
       span(id='time') 00:00.000
       div(class='timeLabel') time elapsed
+
+  script(src="/javascripts/index.js")
