--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,9 @@ block content
 
     div(id='mainbox')
       p(class='leadHeader') Think you're fast?
-      p(class='leadCopy') User onboarding is important.  We get it.  Introducing Dwolla Direct.  See how quickly you can get through our new account creation flow.  The faster you finish, the more money you’ll get.
+      p(class='leadCopy') User onboarding is important. We get it. Introducing 
+        a(href='http://blog.dwolla.com/introducing-dwolla-direct/' target='_blank') Dwolla Direct
+        | . See how quickly you can get through our new account creation flow.  The faster you finish, the more money you’ll get.
         span(class='asterisk') *
 
       a(href='#', data-url=oauthURL, id='oAuthBeginLink')
