--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title= Dwolla Registration Race
+    title Dwolla Registration Race
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel="stylesheet", href="//fonts.googleapis.com/css?family=Roboto:400,300,100,500,700")
 
