--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,7 @@ html
   head
     title Dwolla Registration Race
     link(rel='stylesheet', href='/stylesheets/style.css')
-    link(rel="stylesheet", href="//fonts.googleapis.com/css?family=Roboto:400,300,100,500,700")
+    link(rel="stylesheet", href="http://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700")
 
     script(src="/javascripts/jquery.min.js")
 
